<resources>
    <string name="app_name">LicentaManolacheMariaCatalina</string>
    <string name="default_value">-</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="slogan">Discover the food near you</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="cos_de_cumparaturi">Cos de cumparaturi</string>
    <string name="meniu">Meniu</string>
    <string name="comenzi">Comenzi</string>
    <string name="cont">Cont</string>
    <string name="numele_restaurantului">Numele restaurantului</string>
    <string name="foodName">Denumirea felului de mancare</string>
    <string name="price">1,000</string>
    <string name="restaurant_name">Numele restaurantului</string>
    <string name="category_name">Numele categoriei</string>
    <string name="food_name">Numele felului de mâncare</string>
    <string name="food_description">Descrierea felului de mâncare</string>
    <string name="restaurants_list_title">Lista restaurantelor</string>
    <string name="total">Total: </string>
    <string name="title_activity_account">Account</string>
    <string name="menu_title">Meniu</string>
    <string name="orders">Comenzi</string>
    <string name="next_step">Mergi la pasul următor</string>
    <string name="connect">Conectare</string>
    <string name="validate_phone_number">Validează-ți numărul de telefon</string>
    <string name="password">Parola</string>
    <string name="register_here">Nu ai cont? Înregistrează-te aici.</string>
    <string name="connect_to_account">Conectează-te</string>
    <string name="forgot_password">Ai uitat parola? Click aici pentru resetare.</string>
    <string name="email">Email</string>
    <string name="validate">Validează</string>
    <string name="receive_text_message_for_phone_validation">Ai primit un cod prin SMS. Introdu-l mai sus pentru a valida numărul de telefon.</string>
    <string name="necesity_validation_code">Este necesar codul pentru validare</string>
    <string name="initial_total">0 RON</string>
    <string name="main_page">Pagina principală</string>
    <string name="account">Cont</string>
    <string name="categories">Categorii</string>
    <string name="phone">Telefon</string>
    <string name="name">Nume</string>
    <string name="already_has_account">Ai deja cont? Conectează-te aici!</string>
    <string name="restaurants">Restaurante</string>
    <string name="search_restaurant">Caută restaurantul dorit</string>
    <string name="search_favourite_restaurant">Caută-ti restaurantul preferat</string>
    <string name="cart">Coș</string>
    <string name="pick_address">Alege adresa de livrare:</string>
    <string name="street">Strada</string>
    <string name="number">Număr</string>
    <string name="block">Bloc</string>
    <string name="entrance">Scara</string>
    <string name="floor">Etaj</string>
    <string name="apartment">Apartament</string>
    <string name="shipping_address">Introdu adresa de livrare:</string>
    <string name="pick_payment_method">Alege metoda de plată:</string>
    <string name="place_order">Plasează comanda</string>
    <string name="register">Inregistrează-te</string>
    <string name="currency">\" RON\"</string>
    <string-array name="paymentMethod">
        <item>Numerar</item>
        <item>Card la livrare</item>
        <item>Card online</item>
    </string-array>
    <string-array name="categoryType">
        <item>Pizza</item>
        <item>Fast-Food</item>
        <item>Paste</item>
        <item>Vegetarian</item>
    </string-array>
    <string name="title_activity_delivery_location">DeliveryLocation</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="current_location">Locația curentă</string>
    <string name="add_another_address">Adaugă altă adresă</string>
    <string name="city">Oraș</string>
    <string name="region">Județ</string>
    <string name="select_maps_address">Selectează o adresă de pe hartă</string>
    <string name="choose_address">Alegere adresă</string>
    <string name="pickedAddress">Adresa aleasă:</string>
    <string name="choose_wanted_address">Selectați adresa dorită</string>
    <string name="title_activity_confirmation_order">ConfirmationOrder</string>
    <string name="return_to_main_menu">Reveniți la meniul principal</string>
    <string name="estimated_arrival_time">12:20-12:30</string>
    <string name="pick_a_location">Alege o locație pe hartă</string>
    <string name="order_history">Istoricul comenzilor</string>
    <string name="order_details">Detaliile comenzii</string>
    <string name="address_name">Adresa#1</string>
    <string name="address_example">Strada ...</string>
    <string name="my_addresses">Adresele mele</string>
    <string name="welcome_name">Bine ai venit, Maria!</string>
    <string name="my_profile">Profilul meu</string>
    <string name="sign_out">Deconectare</string>
    <string name="check_phone_number">Verifică numărul de telefon</string>
    <string name="reset_password">Resetare parolă</string>
    <string name="create_account">Creare cont</string>
    <string name="example_email">numeprenume@gmail.com</string>
    <string name="example_phone_number">+40723232323</string>
    <string name="app">Aplicație</string>
    <string name="account_details">Detaliile contului</string>
    <string name="enter_new_address">Introdu o nouă adresă</string>
    <string name="pick_wanted_option">Alege opțiunea dorită:</string>
    <string name="exclamation_mark">!</string>
    <string name="welcome_account">Bine ai venit, </string>
    <string name="all_restaurants">Toate restaurantele</string>
    <string name="ten_minutes">10 min.</string>
    <string name="quantity">Cantitate:</string>
    <string name="user_name">Numele utilizatorului</string>
    <string name="comment_example">Exemplu comentariu</string>
    <string name="comments">Comentarii</string>
    <string name="buy">Cumpăra</string>
    <string name="process_payment">Procesare plată</string>
    <string name="see_users_opinion">Vezi părerile celorlalți utilizatori</string>
    <string name="see_all_products">Vezi toate produsele</string>
    <string name="my_location">Locația mea</string>
    <string name="deliver_anywhere">Livrăm oriunde, oricând!</string>
    <string name="new_account">Cont nou</string>
    <string name="status">Status</string>
    <string name="distance">Distanța</string>
    <string name="join_our_team">Fă parte din echipa noastra!</string>
    <string name="enter_given_credentials">Introdu mai sus datele primite de la administrator.</string>
    <string name="authenticate">Autentificare</string>
    <string name="click_here_for_restaurants">Ești furnizor? Dă click aici!</string>
    <string name="products">Produse</string>
    <string name="order1">Comanda #1</string>
    <string name="order_status">Status: </string>
    <string name="address">Adresa: </string>
    <string name="lei">lei</string>
    <string name="chosen_address">Adresa aleasă este: Strada Liviu Rebreanu</string>
    <string name="category">Categorie</string>
    <string name="logout">Deconectare</string>
    <string name="informations">Informații</string>
    <string name="product">Produs</string>
    <string name="see_users_opinions">Vezi părerile clienților</string>
    <string name="add_new_product">Adaugă un produs nou</string>
    <string name="margherita">Margherita</string>
    <string name="price_example">25.75</string>
    <string name="description_example">Pizza cu sos de roșii și mozzarella...</string>
    <string name="product_name">Numele produsului:</string>
    <string name="product_price">Prețul produsului:</string>
    <string name="product_description">Descrierea produsului:</string>
    <string name="add_product">Adaugă produsul</string>
    <string name="product_image">Imaginea produsului:</string>
    <string name="new_product">Produs nou</string>
    <string name="driver_click_here">Ești livrator? Dă click aici!</string>
    <string name="auth_driver">Autentificare livrator</string>
    <string name="preparation_duration">Durata de preparare: (în minute)</string>
    <string name="pick_up_distance">Distanța de preluare:</string>
    <string name="delivery_distance">Distanța de livrare</string>
    <string name="total_distance">Distanța totală:</string>
    <string name="personal_orders">Comenzile mele</string>
    <string name="deliver_it_right">Deliver It Right!</string>
    <string name="order_placed_successfully">Comanda a fost plasată cu succes!</string>
    <string name="change_password">Modifică parola</string>
    <string name="confirm_new_password">Confirmare parolă nouă</string>
    <string name="new_password">Parolă nouă</string>
    <string name="old_password">Parolă veche</string>
    <string name="select_from_the_saved_addresses">Selectează una din adresele tale</string>
    <string name="do_you_want_to_deliver_order">Dorești să livrezi comanda selectată?</string>
    <string name="confirm">Confirmare</string>
    <string name="my_orders">Comenzile mele</string>
    <string name="administrator">Administrator</string>
    <string name="drivers">Livratori</string>
    <string name="date">Data:</string>
    <string name="order_number">Număr de comenzi:</string>
    <string name="driver_name">Nume livrator</string>
    <string name="admin_account">Contul administratorului</string>
    <string name="drivers_list">Lista livratorilor</string>
    <string name="add_new_driver_account">Adăugare cont de livrator</string>
    <string name="add">Adaugă</string>
    <string name="new_driver_name">Numele livratorului:</string>
    <string name="restaurant_accounts">Conturile restaurantelor:</string>
    <string name="add_new_restaurant">Adaugă un nou restaurant:</string>
    <string name="new_restaurant">Restaurant nou</string>
    <string name="new_driver">Livrator nou</string>
    <string name="address_word">Adresa</string>
    <string name="restaurant_image">Imaginea restaurantului:</string>
    <string name="start_shopping">Începe cumpărăturile</string>
    <string name="orders_list">Lista comenzilor</string>
    <string name="orders_title">Comenzi:</string>
    <string name="client_name">Numele clientului</string>
    <string name="category_image">Imaginea categoriei:</string>
    <string name="add_new_category">Adaugă o nouă categorie:</string>
    <string name="category_name_text">Denumire</string>
    <string name="new_category">Categorie nouă</string>
    <string name="pick_category_or_categories">Alege categoria/categoriile</string>
    <string name="payment_method">Metodă de plată:</string>
    <string name="no_restaurants">Nu există restaurante în această categorie</string>
    <string name="no_products">Nu există produse disponibile la acest restaurant.</string>
    <string name="no_orders_placed">Nu există comenzi plasate.</string>
    <string name="restaurant_no_products">Restaurantul nu are produse disponibile. Adaugă produse folosind butonul de mai jos.</string>
</resources>