<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_lunch_bag"
            android:iconTint="@color/white"
            android:title="@string/meniu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:iconTint="@color/white"
            android:title="@string/cos_de_cumparaturi" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_bill"
            android:iconTint="@color/white"
            android:title="@string/comenzi" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:iconTint="@color/white"
            android:title="@string/cont" />
    </group>
</menu>